[package]
name = "nss-sys"
version = "0.2.0"
authors = ["Martin Thomson <mt@lowentropy.net>"]
edition = "2018"
rust-version = "1.57.0"
license = "MIT/Apache-2.0"

[dependencies]
once_cell = "1"

[build-dependencies]
bindgen = {version = "0.60", default-features = false, features= ["runtime"]}
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
mozbuild = {version = "0.1", optional = true}

[features]
default = ["deny-warnings"]
deny-warnings = []
gecko = ["mozbuild"]
